--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "@radix-ui/react-accordion": "^1.2.1",
     "@radix-ui/react-alert-dialog": "^1.1.2",
     "@radix-ui/react-avatar": "^1.1.1",
+    "@radix-ui/react-checkbox": "^1.1.2",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-navigation-menu": "^1.2.1",
+    "@radix-ui/react-radio-group": "^1.2.1",
     "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
@@ -27,12 +29,14 @@
     "clsx": "^2.1.1",
     "cookies-next": "^4.3.0",
     "embla-carousel-react": "^8.3.1",
+    "framer-motion": "^11.11.11",
     "lucide-react": "^0.454.0",
     "next": "14.2.16",
     "next-auth": "^4.24.10",
     "react": "^18",
     "react-dom": "^18",
     "react-redux": "^9.1.2",
+    "swr": "^2.2.5",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7"
   },
